--- a/src/styles/_settings.css
+++ b/src/styles/_settings.css
@@ -283,6 +283,47 @@ aside input[type='range']::-ms-tooltip {
 	display: none;
 }
 
+label.input-file {
+	position: relative;
+	display: block;
+	cursor: pointer;
+	text-align: center;
+	font-size: 13px;
+}
+
+label.input-file span {
+	position: absolute;
+	top: 50%;
+	left: 10%;
+	width: 80%;
+	margin: auto;
+	transform: translateY(-50%);
+}
+
+input[type='file'] {
+	height: 100px;
+	width: 100%;
+	color: transparent;
+	cursor: pointer;
+	transition: background-color 0.2s;
+}
+
+input[type='file']::-webkit-file-selector-button,
+input[type='file']::file-selector-button {
+	display: none;
+}
+
+label.input-file:hover input[type='file'],
+label.input-file:focus input[type='file'] {
+	background-color: var(--color-focused);
+}
+
+label.input-file.dragover input[type='file'] {
+	background-color: var(--color-blue);
+	opacity: 1;
+	transform: scale(1.03);
+}
+
 aside form {
 	display: flex;
 	position: relative;
@@ -599,60 +640,6 @@ aside form.valid button:not(:disabled):active {
 	height: 100px;
 }
 
-.uploadContainer {
-	overflow: hidden;
-	position: relative;
-	display: block;
-	width: 100%;
-	height: 100px;
-	min-width: 200px;
-	line-height: 100px;
-	font-size: 14px;
-	text-align: center;
-	cursor: pointer;
-	color: var(--color-areas-text);
-	background-color: var(--color-areas);
-	border: 1px dashed transparent;
-	transform: scale(1);
-	box-sizing: border-box;
-	border-radius: 10px;
-	pointer-events: all;
-}
-
-.uploadContainer input[type='file']#i_bgfile {
-	position: absolute;
-	display: block;
-	overflow: hidden;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	height: 100px;
-	width: 100%;
-	cursor: pointer;
-}
-
-.uploadContainer:hover,
-.uploadContainer:focus,
-.uploadContainer.dragover,
-.uploadContainer:active {
-	transition: all 0.2s;
-}
-
-.uploadContainer:hover {
-	background-color: var(--color-focused);
-}
-
-.uploadContainer.dragover {
-	background-color: var(--color-blue);
-	color: white;
-	opacity: 1;
-	transform: scale(1.03);
-}
-
-.uploadContainer:active {
-	background-color: var(--color-input);
-}
-
 #fileContainer {
 	width: 100%;
 	display: grid;
@@ -663,6 +650,7 @@ aside form.valid button:not(:disabled):active {
 	padding: 3px;
 	overflow-y: auto;
 	overflow-x: hidden;
+	box-sizing: border-box;
 }
 
 .thumbnail {
